# sip-simulations

./: .dockerignore  .env.example  .replit  Dockerfile  README.md  db.py  docker-compose.yml  main.py  pyproject.toml  simulation.py
static/: styles.css
templates/: base.html  index.html  results.html
tests/: test_app.py  test_simulation.py
