[project]
name = "sip-simulation"
version = "0.1.0"
description = "Monte Carlo SIP simulator built with FastAPI, NumPy, Plotly, and Jinja."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "numpy>=2.1.0",
    "plotly>=5.24.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
